--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </table>
       </div>
     </div>
+    <div class="text-center mt-3">
+      <p>Dibuat oleh <a href="https://ramadhafidz.github.io/ini-serius-calculator/" target="_blank">Hafidz Ramadhan</a>, lihat di Repositori <a href="https://github.com/ramadhafidz/ini-serius-calculator/">ini</a></p>
+    </div>
+    
     <script src="js/script.js"></script>
   </body>
 </html>
